--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,12 @@ title: 羚羊挂角
 subtitle: 无迹可寻
 description: 博客还是要继续的，万一有用呢。
 author: tqcenglish
-language: zh-CN
+language: zh-Hans
 timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://tqcenglish.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
