--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ pagination_dir: page
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
 ##theme: landscape
-theme: hexo-theme-next
+theme: next
 #theme: utopia 
 
 # Deployment
