--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,11 @@
 # Site
 title: 羚羊挂角
 subtitle: 无迹可寻
-description: 博客还是要继续的，万一有用呢。
+description: 记录生活,记录点滴
 author: tqcenglish
-language: zh-Hans
+language: zh-CN
 timezone: Asia/Shanghai
+favicon: https://assets-cdn.github.com/favicon.ico
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -28,9 +29,8 @@ i18n_dir: :lang
 skip_render:
 
 # Writing
-new_post_name: :title.md # File name of new posts
+new_post_name: :year:month:day-:title.md # File name of new posts
 default_layout: post
-auto_spacing: true
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
@@ -41,8 +41,8 @@ future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: true
-  tab_replace: true
+  auto_detect: false
+  tab_replace:
 
 # Category & Tag
 default_category: uncategorized
@@ -58,15 +58,39 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-##theme: landscape
-theme: next
-#theme: utopia 
+theme: clean
+
+# Google Analytics
+ga: # GA code UA-XXXXXXXX-X
+
+#marked setting for markdown
+marked:
+  gfm: true
+  pedantic: false
+  sanitize: false
+  tables: true
+  breaks: true
+  smartLists: true
+  smartypants: true
+
+gcs: # GOOGLE CUSTOM SEARCH
+baidutongji: # BAIDU TONGJI CODE
+disqus: # DISQUS ID
+
+location: Hong Kong
+email: xx@example.com
+
+avatar: /img/avatar.jpg
+social:
+  github: https://github.com/sabrinaluo
+  weibo: http://weibo.com/206663121
+  linkedin: 
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
