--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 羚羊挂角
 subtitle: 无迹可寻
-description: 记录生活,记录点滴
+description: 伐木掎矣，析薪杝矣
 author: tqcenglish
 language: zh-CN
 timezone: Asia/Shanghai
@@ -58,7 +58,7 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 5
+per_page: 4
 pagination_dir: page
 
 # Extensions
