--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/next"]
-	path = themes/next
-	url = https://github.com/iissnan/hexo-theme-next.git
+[submodule "themes/clean"]
+	path = themes/clean
+	url = https://github.com/tqcenglish/hexo-theme-clean.git
